# ai-engineering-robin-sundman-nilsson-de24

./: .gitignore  hello.py  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: 01_pydantic_basics.ipynb  02_pydantic_api.ipynb  person6.json
05_pydantic_gemini/: 01_gemini_pydantic.ipynb  02_gemini_pydantic_more_robust.ipynb  cheap_houses.csv  library.json
06_fastapi_crud/: api.py  data_processing.py
07_pydanticai_fundmentals/: pydanticai_pydantic_model.ipynb
07_pydanticai_fundmentals/src/: data_models.py  movies_api.py  setup_db.py  utils.py
07_pydanticai_fundmentals/src/data/: movies.duckdb
08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector_database/: lancedb_basics.ipynb
10_rag/: explorations.ipynb  ingestion.py  pdfs_to_text.py
10_rag/backend/: constants.py  data_models.py  rag.py
10_rag/frontend/: app.py
10_rag/knowledge_base/articles.lance/_transactions/: 0-c7686335-6a36-428b-aee3-2e9a49b3dab3.txn  1-2c81d0bd-1181-41a0-b792-dc4c52dc7c26.txn  2-bdd99ff7-a177-46d8-84db-61876591839b.txn  3-81c5f86e-eabd-4f84-b786-d719e3e4ded4.txn  4-cb47a9a9-1ed5-4dc0-81d2-3dd14bd62c32.txn  5-b003e261-e52b-4bfe-ab1a-e0f82dd967f9.txn  6-378cef0c-f559-4e31-bf51-aebc8887524e.txn  7-17be8b59-b87d-431d-80c1-d3c0ceb725af.txn  8-d09901b8-ac6a-4898-84a8-0ebc642f3b38.txn
code_alongs/10_rag/backend/: rag.py
code_alongs/10_rag/frontend/: app.py
code_alongs/10_rag/knowledge_base/articles.lance/_transactions/: 0-5978fdab-788a-4a0b-8bbf-f97f1eaad186.txn  1-c83cff10-5d36-486f-ac89-adb830ddc888.txn  (+7 more)
