[project]
name = "ai-engineering-robin-sundman-nilsson-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.19.0",
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "google-genai>=1.51.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.25.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]
